# kornia-rs

./: BUBBALOOP_BOTTLENECKS_AND_GPU_SPIKE.md  Cargo.toml  GSOC_2026_PROPOSAL_INLINE_REFERENCES.md  PROPOSAL_REFERENCES_INLINE.md  TEST_PLAN.md
crates/kornia-cuda-oxide/: .gitignore  ALIGNMENT.md  COMPARISON.md  Cargo.toml  rustc-ice-2026-05-23T16_42_14-294076.txt  rustc-ice-2026-05-23T17_30_43-300535.txt
crates/kornia-cuda-oxide/examples/: bench_fusion.rs  bench_min.rs  correctness.rs  ice_reproducer.rs
crates/kornia-cuda-oxide/src/: lib.rs  weights.rs
crates/kornia-imgproc/src/: resize.rs
crates/kornia-imgproc/src/gpu/: color.rs  mod.rs  resize.rs
crates/kornia-io/examples/: exif_auto_orient.rs
crates/kornia-tensor/src/: storage.rs  tensor.rs
crates/kornia-vlm/src/paligemma/: mod.rs
crates/kornia-vlm/src/smolvlm/: mod.rs
crates/kornia-vlm/src/smolvlm2/: mod.rs
examples/kornia-gpu-benchmark/: Cargo.toml  README.md
examples/kornia-gpu-benchmark/src/: main.rs
examples/smol_vlm2/: README.md
examples/smol_vlm2/src/: demo.rs
